--- a/Ejercicio7/Ejercicio7.html
+++ b/Ejercicio7/Ejercicio7.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 2</title>
+    <title>Document</title>
 </head>
 <body>
-    <script src="Ejercicio2.js"></script> 
+    
+    <script src="Ejercicio7.js"></script>
 </body>
 </html>
